--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Dopetrope by HTML5 UP</title>
+		<title>Anirudh - Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -18,7 +18,7 @@
 				<section id="header">
 
 					<!-- Logo -->
-						<h1><a href="index.html">Dopetrope</a></h1>
+						<h1><a href="index.html">Portfolio</a></h1>
 
 					<!-- Nav -->
 						<nav id="nav">
@@ -52,8 +52,8 @@
 					<!-- Banner -->
 						<section id="banner">
 							<header>
-								<h2>Howdy. This is Dopetrope.</h2>
-								<p>A responsive template by HTML5 UP</p>
+								<h2>Hi, I am Anirudh</h2>
+								<p>I am a Software Developer</p>
 							</header>
 						</section>
 
@@ -368,9 +368,10 @@
 
 								<!-- Copyright -->
 									<div id="copyright">
-										<ul class="links">
+										Anirudh Pulavarthy. All rights reserved
+										<!-- <ul class="links">
 											<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-										</ul>
+										</ul> -->
 									</div>
 
 							</div>
