--- a/left-sidebar.html
+++ b/left-sidebar.html
@@ -25,27 +25,28 @@
 							<ul>
 								<li><a href="index.html">Home</a></li>
 								<li>
-									<a href="#">Dropdown</a>
+									<a href="#">This</a>
 									<ul>
-										<li><a href="#">Lorem ipsum dolor</a></li>
-										<li><a href="#">Magna phasellus</a></li>
-										<li><a href="#">Etiam dolore nisl</a></li>
+										<li><a href="#">Sorry</a></li>
+										<li><a href="#">But</a></li>
+										<li><a href="#">Come</a></li>
+										<li><a href="#">Back</a></li>
+										<li><a href="#">Later</a></li>
 										<li>
-											<a href="#">Phasellus consequat</a>
+											<a href="#">Click Here</a>
 											<ul>
-												<li><a href="#">Magna phasellus</a></li>
-												<li><a href="#">Etiam dolore nisl</a></li>
-												<li><a href="#">Veroeros feugiat</a></li>
-												<li><a href="#">Nisl sed aliquam</a></li>
-												<li><a href="#">Dolore adipiscing</a></li>
+												<li><a href="#">Why</a></li>
+												<li><a href="#">Are</a></li>
+												<li><a href="#">You</a></li>
+												<li><a href="#">Still</a></li>
+												<li><a href="#">Here?</a></li>
 											</ul>
 										</li>
-										<li><a href="#">Veroeros feugiat</a></li>
 									</ul>
 								</li>
-								<li class="current"><a href="left-sidebar.html">Left Sidebar</a></li>
-								<li><a href="right-sidebar.html">Right Sidebar</a></li>
-								<li><a href="no-sidebar.html">No Sidebar</a></li>
+								<li class="current"><a href="left-sidebar.html">Webpage</a></li>
+								<li><a href="right-sidebar.html">Is Still In</a></li>
+								<li><a href="no-sidebar.html">Construction</a></li>
 							</ul>
 						</nav>
 
