Adding unfunny placeholders in index.html

--- a/index.html
+++ b/index.html
@@ -24,28 +24,30 @@
 						<nav id="nav">
 							<ul>
 								<li class="current"><a href="index.html">Home</a></li>
+								<li><a href="#">This</a></li>
+								<li><a href="left-sidebar.html">Webpage</a></li>
+								<li><a href="right-sidebar.html">Is Still In</a></li>
+								<li><a href="no-sidebar.html">Costruction</a></li>
 								<li>
-									<a href="#">Dropdown</a>
+									<a href="#">Click</a>
 									<ul>
-										<li><a href="#">Lorem ipsum dolor</a></li>
-										<li><a href="#">Magna phasellus</a></li>
-										<li><a href="#">Etiam dolore nisl</a></li>
-										<li>
-											<a href="#">Phasellus consequat</a>
-											<ul>
-												<li><a href="#">Magna phasellus</a></li>
-												<li><a href="#">Etiam dolore nisl</a></li>
-												<li><a href="#">Veroeros feugiat</a></li>
-												<li><a href="#">Nisl sed aliquam</a></li>
-												<li><a href="#">Dolore adipiscing</a></li>
-											</ul>
-										</li>
-										<li><a href="#">Veroeros feugiat</a></li>
+										<li><a href="#">Sorry</a></li>
+										<li><a href="#">But</a></li>
+										<li><a href="#">Come</a></li>
+										<li><a href="#">Back</a></li>
+										<li><a href="#">Later</a></li>
 									</ul>
 								</li>
-								<li><a href="left-sidebar.html">Left Sidebar</a></li>
-								<li><a href="right-sidebar.html">Right Sidebar</a></li>
-								<li><a href="no-sidebar.html">No Sidebar</a></li>
+								<li>
+									<a href="#">Here</a>
+									<ul>
+										<li><a href="#">Why</a></li>
+										<li><a href="#">Are</a></li>
+										<li><a href="#">You</a></li>
+										<li><a href="#">Still</a></li>
+										<li><a href="#">Here?</a></li>
+									</ul>
+								</li>
 							</ul>
 						</nav>
 
