--- a/index.html
+++ b/index.html
@@ -1,10 +1,22 @@
 <!DOCTYPE HTML>
+
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="refresh" content="0;url=https://anirudh-pulavarthy.github.io/DevChronicles/">
+  <title>Redirecting...</title>
+</head>
+<body>
+  <p>If you're not redirected, <a href="https://anirudh-pulavarthy.github.io/DevChronicles/">click here</a>.</p>
+</body>
+</html>
+
 <!--
 	Dopetrope by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
-<html>
+<!-- <html>
 	<head>
 		<title>Anirudh - Portfolio</title>
 		<meta charset="utf-8" />
@@ -392,4 +404,4 @@
 			<script src="assets/js/main.js"></script>
 
 	</body>
-</html>
+</html> -->
